--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot==20.7
-openai
-requests
-pillow
+python-telegram-bot==21.7
+Pillow==10.3.0
+requests==2.31.0
+openai==1.25.2
+sqlite3
